varify token pending in api
